updated manifest, popup

--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,15 @@
       "48": "favicon.png",
       "128": "favicon(3).png"
     },
-    "permissions": ["tabs"],
     "content_scripts": [
         {
           "matches": ["<all_urls>"],
           "js": ["content.js"]
         }
-      ]
+    ],
+    "action": {
+        "default_popup": "popup.html"
+    }
     
   }
   
