--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,9 @@
     "content_scripts": [
         {
           "matches": ["<all_urls>"],
-          "js": ["content.js"]
+          "js": ["runthrutabs.js"]
         }
-    ],
-    "action": {
-        "default_popup": "popup.html"
-    }
+    ]
     
   }
   
