--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
       "48": "favicon.png",
       "128": "favicon(3).png"
     },
-    "permissions": ["tabs", "activeTab", "scripting", "storage", "webNavigation", "https://*", "http://*"],
+    "permissions": ["tabs", "activeTab", "scripting", "storage", "webNavigation", "*://*/*"],
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
